 - Implemented gl.GetMapRendering() to expose access to the map rendering variables.
 ! Removed voidWater and voidGround constant parameters from LuaConstGame, as they're no longer const.
 - add Spring.{Set,Get}{Unit,Feature}SelectionVolumeData callouts
 ! remove Spring.SetSunParameters and Spring.SetSunManualControl
 ! remove gl.Smoothing
 - add Game.envDamageTypes table containing {def}IDs of environmental-damage sources (patch by Sprunk)
 - add Spring.{Get,Set}ConfigFloat callouts
 - add Spring.{Set,Get}{Unit,Feature}SelectionVolumeData callouts
 - add Spring.SpawnExplosion callout
 - add Spring.SpawnSFX callout
   equal to the *UnitScript versions of EmitSFX, but
   takes position and direction arguments (in either
   unit- or piece-space) instead of a piece index
 - add DrawScreenPost callin (patch by ivand/lhog)
   Similar to DrawScreenEffects, this can be used to alter the contents of a
   frame after it has been completely rendered (i.e. World, MiniMap, Menu, UI).
 - add DrawWorldPreParticles callin
 - add start- and hit-position (x,y,z) arguments to ShieldPreDamaged callin
 - math.random is now available during execution of defs.lua
   (math.randomseed also exists, but will always be a no-op)
 - allow gl.BlitFBO blitting from/to the default FB with userdata FBO's
 - bump gl.UniformArray length restriction from 32 to 1024
 - add Spring.SetFeatureResources(number metal, number energy [, number reclaimTime [, number reclaimLeft]])
 - add Spring.SetUnitPieceMatrix(number unitID, number pieceNum, table matrix)
   sets the local (i.e. parent-relative) matrix of the given piece if any of the
   first three elements are non-zero, and also blocks all script animations from
   modifying it until {0, 0, 0} is passed
   (matrix should be an array of 16 floats, but is not otherwise sanity-checked)
 - add LUS ChangeHeading callin
 - add LUS {Start,Stop}Skidding callins; called when a (ground) unit reacts to an impulse